--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
       <artifactId>nimbus-jose-jwt</artifactId>
       <version>9.41.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
+      <version>5.6</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
