--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,11 +18,6 @@
       }
     ],
     "@typescript-eslint/no-explicit-any": "warn",
-    "no-console": [
-      "warn",
-      {
-        "allow": ["warn", "error"]
-      }
-    ]
+    "no-console": "off"
   }
 }
